{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 242,
  "lineage": "ed924e10-d88e-f3ee-e88e-0d762e056b74",
  "resources": [
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:332745928618:security-group/sg-0179572eb193deadb",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0179572eb193deadb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow all internal TCP and UDP",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "owner_id": "332745928618",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Demo-with-terraform",
              "Name": "aht-demo-modularized-sg"
            },
            "tags_all": {
              "Environment": "Demo-with-terraform",
              "Name": "aht-demo-modularized-sg"
            },
            "vpc_id": "vpc-0defcc82d58dc576d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_base.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07b518fdd3b5e5aa3",
            "association_id": "eipassoc-02504edfb3f1939ea",
            "domain": "vpc",
            "id": "eipalloc-07b518fdd3b5e5aa3",
            "network_border_group": "us-west-1",
            "network_interface": "eni-08f22697267561624",
            "private_dns": "ip-10-4-24-245.us-west-1.compute.internal",
            "private_ip": "10.4.24.245",
            "public_dns": "ec2-50-18-49-32.us-west-1.compute.amazonaws.com",
            "public_ip": "50.18.49.32",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Demo-with-terraform",
              "Name": "aht-demo-modularized-us-west-1b"
            },
            "tags_all": {
              "Environment": "Demo-with-terraform",
              "Name": "aht-demo-modularized-us-west-1b"
            },
            "vpc": true
          },
          "dependencies": [
            "module.aws_base.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:332745928618:internet-gateway/igw-0cef794c133340927",
            "id": "igw-0cef794c133340927",
            "owner_id": "332745928618",
            "tags": {
              "Environment": "Demo-with-terraform",
              "Name": "aht-demo-modularized"
            },
            "tags_all": {
              "Environment": "Demo-with-terraform",
              "Name": "aht-demo-modularized"
            },
            "vpc_id": "vpc-0defcc82d58dc576d"
          },
          "dependencies": [
            "module.aws_base.module.vpc.aws_vpc.this",
            "module.aws_base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07b518fdd3b5e5aa3",
            "connectivity_type": "public",
            "id": "nat-01abb0cc0041e2657",
            "network_interface_id": "eni-08f22697267561624",
            "private_ip": "10.4.24.245",
            "public_ip": "50.18.49.32",
            "subnet_id": "subnet-018d15d48e26d7bd7",
            "tags": {
              "Environment": "Demo-with-terraform",
              "Name": "aht-demo-modularized-us-west-1b"
            },
            "tags_all": {
              "Environment": "Demo-with-terraform",
              "Name": "aht-demo-modularized-us-west-1b"
            }
          },
          "dependencies": [
            "module.aws_base.data.aws_availability_zones.available",
            "module.aws_base.module.vpc.aws_eip.nat",
            "module.aws_base.module.vpc.aws_internet_gateway.this",
            "module.aws_base.module.vpc.aws_subnet.public",
            "module.aws_base.module.vpc.aws_vpc.this",
            "module.aws_base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00d572b4f160c85991080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01abb0cc0041e2657",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00d572b4f160c8599",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_base.data.aws_availability_zones.available",
            "module.aws_base.module.vpc.aws_eip.nat",
            "module.aws_base.module.vpc.aws_internet_gateway.this",
            "module.aws_base.module.vpc.aws_nat_gateway.this",
            "module.aws_base.module.vpc.aws_route_table.private",
            "module.aws_base.module.vpc.aws_subnet.public",
            "module.aws_base.module.vpc.aws_vpc.this",
            "module.aws_base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cef794c133340927",
            "id": "r-rtb-02fb55168f80a69af1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02fb55168f80a69af",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_base.module.vpc.aws_internet_gateway.this",
            "module.aws_base.module.vpc.aws_route_table.public",
            "module.aws_base.module.vpc.aws_vpc.this",
            "module.aws_base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:332745928618:route-table/rtb-00d572b4f160c8599",
            "id": "rtb-00d572b4f160c8599",
            "owner_id": "332745928618",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01abb0cc0041e2657",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Demo-with-terraform",
              "Name": "aht-demo-modularized-private"
            },
            "tags_all": {
              "Environment": "Demo-with-terraform",
              "Name": "aht-demo-modularized-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0defcc82d58dc576d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_base.data.aws_availability_zones.available",
            "module.aws_base.module.vpc.aws_vpc.this",
            "module.aws_base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:332745928618:route-table/rtb-02fb55168f80a69af",
            "id": "rtb-02fb55168f80a69af",
            "owner_id": "332745928618",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cef794c133340927",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Demo-with-terraform",
              "Name": "aht-demo-modularized-public"
            },
            "tags_all": {
              "Environment": "Demo-with-terraform",
              "Name": "aht-demo-modularized-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0defcc82d58dc576d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_base.module.vpc.aws_vpc.this",
            "module.aws_base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9291098f47960ad",
            "route_table_id": "rtb-00d572b4f160c8599",
            "subnet_id": "subnet-08df760429dca0597"
          },
          "dependencies": [
            "module.aws_base.data.aws_availability_zones.available",
            "module.aws_base.module.vpc.aws_route_table.private",
            "module.aws_base.module.vpc.aws_subnet.private",
            "module.aws_base.module.vpc.aws_vpc.this",
            "module.aws_base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052d848671f90664c",
            "route_table_id": "rtb-00d572b4f160c8599",
            "subnet_id": "subnet-0033b24bf6d60bf40"
          },
          "dependencies": [
            "module.aws_base.data.aws_availability_zones.available",
            "module.aws_base.module.vpc.aws_route_table.private",
            "module.aws_base.module.vpc.aws_subnet.private",
            "module.aws_base.module.vpc.aws_vpc.this",
            "module.aws_base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d867fc3c895acbc",
            "route_table_id": "rtb-02fb55168f80a69af",
            "subnet_id": "subnet-018d15d48e26d7bd7"
          },
          "dependencies": [
            "module.aws_base.data.aws_availability_zones.available",
            "module.aws_base.module.vpc.aws_route_table.public",
            "module.aws_base.module.vpc.aws_subnet.public",
            "module.aws_base.module.vpc.aws_vpc.this",
            "module.aws_base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:332745928618:subnet/subnet-08df760429dca0597",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.4.32.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08df760429dca0597",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "332745928618",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Demo-with-terraform",
              "Name": "aht-demo-modularized-private-us-west-1b"
            },
            "tags_all": {
              "Environment": "Demo-with-terraform",
              "Name": "aht-demo-modularized-private-us-west-1b"
            },
            "vpc_id": "vpc-0defcc82d58dc576d"
          },
          "dependencies": [
            "module.aws_base.data.aws_availability_zones.available",
            "module.aws_base.module.vpc.aws_vpc.this",
            "module.aws_base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:332745928618:subnet/subnet-0033b24bf6d60bf40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.4.64.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0033b24bf6d60bf40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "332745928618",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Demo-with-terraform",
              "Name": "aht-demo-modularized-private-us-west-1c"
            },
            "tags_all": {
              "Environment": "Demo-with-terraform",
              "Name": "aht-demo-modularized-private-us-west-1c"
            },
            "vpc_id": "vpc-0defcc82d58dc576d"
          },
          "dependencies": [
            "module.aws_base.data.aws_availability_zones.available",
            "module.aws_base.module.vpc.aws_vpc.this",
            "module.aws_base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:332745928618:subnet/subnet-018d15d48e26d7bd7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.4.0.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018d15d48e26d7bd7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "332745928618",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Demo-with-terraform",
              "Name": "aht-demo-modularized-public-us-west-1b"
            },
            "tags_all": {
              "Environment": "Demo-with-terraform",
              "Name": "aht-demo-modularized-public-us-west-1b"
            },
            "vpc_id": "vpc-0defcc82d58dc576d"
          },
          "dependencies": [
            "module.aws_base.data.aws_availability_zones.available",
            "module.aws_base.module.vpc.aws_vpc.this",
            "module.aws_base.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.aws_base.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:332745928618:vpc/vpc-0defcc82d58dc576d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.4.0.0/16",
            "default_network_acl_id": "acl-0c11334d1e2bd8de2",
            "default_route_table_id": "rtb-0f22226ee0edfdbbe",
            "default_security_group_id": "sg-0179572eb193deadb",
            "dhcp_options_id": "dopt-0d94138f1e00deb18",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0defcc82d58dc576d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f22226ee0edfdbbe",
            "owner_id": "332745928618",
            "tags": {
              "Environment": "Demo-with-terraform",
              "Name": "aht-demo-modularized"
            },
            "tags_all": {
              "Environment": "Demo-with-terraform",
              "Name": "aht-demo-modularized"
            }
          }
        }
      ]
    },
    {
      "module": "module.aws_base.module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "kinesis-streams",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:332745928618:vpc-endpoint/vpce-06c0b809817f89abe",
            "dns_entry": [
              {
                "dns_name": "vpce-06c0b809817f89abe-3kzdarbh.kinesis.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "vpce-06c0b809817f89abe-3kzdarbh-us-west-1c.kinesis.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "vpce-06c0b809817f89abe-3kzdarbh-us-west-1b.kinesis.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "kinesis.us-west-1.amazonaws.com",
                "hosted_zone_id": "Z0828823MYEED5I7RGYL"
              },
              {
                "dns_name": "control-kinesis.us-west-1.amazonaws.com",
                "hosted_zone_id": "Z08309552JBGG2VE3K2XH"
              },
              {
                "dns_name": "*.control-kinesis.us-west-1.amazonaws.com",
                "hosted_zone_id": "Z08309552JBGG2VE3K2XH"
              },
              {
                "dns_name": "data-kinesis.us-west-1.amazonaws.com",
                "hosted_zone_id": "Z082884236F9XV7NFU4X8"
              },
              {
                "dns_name": "*.data-kinesis.us-west-1.amazonaws.com",
                "hosted_zone_id": "Z082884236F9XV7NFU4X8"
              }
            ],
            "id": "vpce-06c0b809817f89abe",
            "network_interface_ids": [
              "eni-09ad081a89f9497a1",
              "eni-0cc849290fe8a4654"
            ],
            "owner_id": "332745928618",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0179572eb193deadb"
            ],
            "service_name": "com.amazonaws.us-west-1.kinesis-streams",
            "state": "available",
            "subnet_ids": [
              "subnet-0033b24bf6d60bf40",
              "subnet-08df760429dca0597"
            ],
            "tags": {
              "Environment": "Demo-with-terraform",
              "Name": "aht-demo-modularized-kinesis-vpc-endpoint"
            },
            "tags_all": {
              "Environment": "Demo-with-terraform",
              "Name": "aht-demo-modularized-kinesis-vpc-endpoint"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0defcc82d58dc576d"
          },
          "dependencies": [
            "module.aws_base.data.aws_availability_zones.available",
            "module.aws_base.module.vpc.aws_route_table.private",
            "module.aws_base.module.vpc.aws_route_table.public",
            "module.aws_base.module.vpc.aws_subnet.private",
            "module.aws_base.module.vpc.aws_vpc.this",
            "module.aws_base.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.aws_base.module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "s3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:332745928618:vpc-endpoint/vpce-0e752a0a347c6e3b1",
            "cidr_blocks": [
              "52.219.220.0/23",
              "52.219.120.0/22",
              "16.15.0.0/21",
              "52.219.216.0/23",
              "52.219.194.0/24",
              "52.219.24.0/21",
              "52.219.112.0/21",
              "3.5.160.0/22",
              "52.219.255.0/24",
              "52.219.192.0/23"
            ],
            "id": "vpce-0e752a0a347c6e3b1",
            "owner_id": "332745928618",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6ba54002",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-00d572b4f160c8599",
              "rtb-02fb55168f80a69af"
            ],
            "service_name": "com.amazonaws.us-west-1.s3",
            "state": "available",
            "tags": {
              "Environment": "Demo-with-terraform",
              "Name": "aht-demo-modularized-s3-vpc-endpoint"
            },
            "tags_all": {
              "Environment": "Demo-with-terraform",
              "Name": "aht-demo-modularized-s3-vpc-endpoint"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0defcc82d58dc576d"
          },
          "dependencies": [
            "module.aws_base.data.aws_availability_zones.available",
            "module.aws_base.module.vpc.aws_route_table.private",
            "module.aws_base.module.vpc.aws_route_table.public",
            "module.aws_base.module.vpc.aws_subnet.private",
            "module.aws_base.module.vpc.aws_vpc.this",
            "module.aws_base.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.aws_base.module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        },
        {
          "index_key": "sts",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:332745928618:vpc-endpoint/vpce-0aa0831c7504f7c95",
            "dns_entry": [
              {
                "dns_name": "vpce-0aa0831c7504f7c95-yb887a68.sts.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "vpce-0aa0831c7504f7c95-yb887a68-us-west-1c.sts.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "vpce-0aa0831c7504f7c95-yb887a68-us-west-1b.sts.us-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z12I86A8N7VCZO"
              },
              {
                "dns_name": "sts.us-west-1.amazonaws.com",
                "hosted_zone_id": "Z0174421V3OPVQ3NH9M0"
              }
            ],
            "id": "vpce-0aa0831c7504f7c95",
            "network_interface_ids": [
              "eni-05f20c0895f58f0dc",
              "eni-0912385541277cd3f"
            ],
            "owner_id": "332745928618",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0179572eb193deadb"
            ],
            "service_name": "com.amazonaws.us-west-1.sts",
            "state": "available",
            "subnet_ids": [
              "subnet-0033b24bf6d60bf40",
              "subnet-08df760429dca0597"
            ],
            "tags": {
              "Environment": "Demo-with-terraform",
              "Name": "aht-demo-modularized-sts-vpc-endpoint"
            },
            "tags_all": {
              "Environment": "Demo-with-terraform",
              "Name": "aht-demo-modularized-sts-vpc-endpoint"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0defcc82d58dc576d"
          },
          "dependencies": [
            "module.aws_base.data.aws_availability_zones.available",
            "module.aws_base.module.vpc.aws_route_table.private",
            "module.aws_base.module.vpc.aws_route_table.public",
            "module.aws_base.module.vpc.aws_subnet.private",
            "module.aws_base.module.vpc.aws_vpc.this",
            "module.aws_base.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.aws_base.module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        }
      ]
    }
  ]
}